--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,49 @@ body{
 
 ul,ol{
     list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1,h2,h3,h4,h5,h6,p{
+    margin: 0;
 }
 
 a{
     text-decoration: none;
+}
+
+.container{
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+
+}
+
+.page-header{
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container{
+    display: flex;
+    align-items: center;
+}
+
+.header-nav{
+    display: flex;
+    align-items: center;
+}
+
+.nav-list{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+
+.contacts-list{
+    display: flex;
+    align-items: center;
+    gap: 40px;
 }
 
 .logo{
@@ -29,6 +68,7 @@ a{
 }
 
 .header-logo{
+    padding: 24px 0;
   margin-right: 76px;
 }
 
@@ -45,11 +85,14 @@ color: #f4f4fd;
 }
 
 .nav-link{
+    display: block;
+    padding: 24px 0;
     font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        
 }
 
 .nav-link:hover,
@@ -60,9 +103,12 @@ color: #404bbf;
 
 .contacts{
     font-style: normal;
+    margin-left: auto;
 }
 
 .contacts-link{
+    display: block;
+    padding: 24px 0;
         font-size: 16px;
         line-height: 1.5;
         letter-spacing: 0.02em;
