--- a/css/styles.css
+++ b/css/styles.css
@@ -51,11 +51,11 @@ a{
     gap: 40px;
 }
 
-.contacts-list{
+
+.contacts-list {
     display: flex;
     align-items: center;
-    gap: 40px;
-}
+    gap: 40px;}
 
 .logo{
     font-family: "Raleway", sans-serif;
@@ -105,7 +105,6 @@ color: #404bbf;
     font-style: normal;
     margin-left: auto;
 }
-
 .contacts-link{
     display: block;
     padding: 24px 0;
