--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,10 @@ a{
     text-decoration: none;
 }
 
+img{
+    display: block
+}
+
 .container{
     max-width: 1158px;
     padding: 0 15px;
@@ -78,6 +82,7 @@ a{
 
 .footer-logo{
     margin-bottom: 16px;
+    display: inline-block;
 }
 
 .footer-logo .logo-part {
@@ -121,17 +126,17 @@ color: #404bbf;
 
 .page-footer{
     background-color: #2e2f42;
-    padding-top: 100px;
-    padding-bottom: 188px;
+padding: 100px 0;
 }
 
 .first-screen {
-   
+padding-top: 188px;
     background-color: #2e2f42;
     padding-bottom: 188px;
 }
 
 .title {
+    border: none;
     padding-top: 188px;
     padding-bottom: 48px;
     max-width: 496px;
@@ -181,6 +186,8 @@ margin-right: auto;
 }
 
 .title-description {
+
+    margin-bottom: 8px;
     text-align: center;
     background-color: #FFFFFF;
     padding-top: 32px;
@@ -202,9 +209,24 @@ margin-right: auto;
 }
 
 .team-description{
+    padding: 120px 0 120px;
     background-color: #F4F4FD
 }
 
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
 .page-title{
     padding-top: 120px;
@@ -234,13 +256,18 @@ margin-right: auto;
 }
 
 .team-item{
-    
+    border-radius: 0px 0px 4px 4px;
    padding-bottom: 120px;
+}
+
+.item-team{
+    padding: 32px 0;
 }
 
 
 
 .second-screen{
+    padding: 120px 0 120px
     display: flex;
     align-items: center;
 }
@@ -252,6 +279,7 @@ display: flex;
 }
 
 .item-description{
+    flex-basis: calc((100% - 72px) / 4))
 display: block;
     padding-top: 148px ;
     padding-bottom: 120px;
@@ -260,21 +288,36 @@ display: block;
 .portfolio-list{
     display: flex;
     align-items: center;
+    row-gap: 48px;
+    margin-bottom: 48px;
     gap: 24px;
     flex-wrap: wrap;
 }
 
 .portfolio-item{
-    
+    margin-bottom: 0
         padding-bottom: 120px;
 }
 
 .portfolio-title{
     text-align: start;
+    margin-bottom: 8px;
 }
 
 .description-portfolio{
     text-align: start;
 
+
+}
+
+.portfolio{
+    padding-top: 120px;
+        padding-bottom: 120px;
+}
+
+.item-portfolio-icon{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
