--- a/css/styles.css
+++ b/css/styles.css
@@ -133,12 +133,11 @@ padding: 100px 0;
 padding-top: 188px;
     background-color: #2e2f42;
     padding-bottom: 188px;
-}
-
+} 
 .title {
    
-    padding-top: 188px;
-    padding-bottom: 48px;
+    /* padding-top: 188px; */
+    margin-bottom: 48px; 
     max-width: 496px;
    margin-left: auto;
    margin-right: auto;
@@ -185,7 +184,7 @@ margin-right: auto;
         color: #f4f4fd;
 }
 
-.title-description {
+/* .title-description {
 
     margin-bottom: 8px;
     text-align: center;
@@ -197,16 +196,16 @@ margin-right: auto;
     letter-spacing: 0.02em;
     color: #2e2f42;
     
-}
+} */
 
-.description-item {
+/* .description-item {
     text-align: center;
     background-color: #FFFFFF;
     padding-top: 8px;
     padding-bottom: 32px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-}
+} */
 
 .team-description{
     padding: 120px 0 120px;
@@ -229,10 +228,10 @@ margin-right: auto;
 }
 
 .page-title{
-    padding-top: 120px;
-    margin-bottom: 72px;
+    /* padding-top: 120px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; */
+    margin-bottom: 72px;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -240,7 +239,7 @@ margin-right: auto;
     text-transform: capitalize;
     color: #2e2f42;
 
-}
+} 
 
 
 
@@ -255,18 +254,24 @@ margin-right: auto;
         gap: 24px;
 }
 
-.team-item{
+/* .team-item{
     border-radius: 0px 0px 4px 4px;
    padding-bottom: 120px;
-}
+    background-color: #FFFFFF;
+    text-align: center;
+} */
 
-.item-team{
-    padding: 32px 0;
-}
+ .item-team{
+        padding: 32px 0;
+    border-radius: 0px 0px 4px 4px;
+        background-color: #FFFFFF;
+        text-align: center;
+    }
 
 
 
-.second-screen{
+
+.second-screen-container{
     padding: 120px 0 120px;
     display: flex;
     align-items: center;
@@ -278,32 +283,33 @@ display: flex;
     gap: 24px;
 }
 
-.item-description{
-flex-basis: calc((100% - 3 * 24px) / 4);
+/* .item-description{
+ flex-basis: calc((100% - 3 * 24px) / 4); 
 display: block;
     padding-top: 148px ;
     padding-bottom: 120px;
-}
+} */
 
 .portfolio-list{
     display: flex;
     align-items: center;
-    row-gap: 48px;
-    margin-bottom: 48px;
+     row-gap: 48px; 
+     /* margin-bottom: 48px; */
     gap: 24px;
     flex-wrap: wrap;
 }
 
 .portfolio-item{
-    row-gap: 48px;
-    margin-bottom: 48px;
-        padding-bottom: 120px;
+     row-gap: 48px; 
+    /* margin-bottom: 48px; */
+        /* padding-bottom: 120px; */
+        flex-wrap: wrap;
 }
 
-.portfolio-title{
+/* .portfolio-title{
     text-align: start;
     margin-bottom: 8px;
-}
+} */
 
 .description-portfolio{
     text-align: start;
@@ -315,10 +321,10 @@ display: block;
     padding-top: 120px;
         padding-bottom: 120px;
 }
-
+ 
 .item-portfolio-icon{
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-}
+} 
 
