--- a/css/styles.css
+++ b/css/styles.css
@@ -184,33 +184,35 @@ margin-right: auto;
         color: #f4f4fd;
 }
 
-/* .title-description {
+ .title-description {
 
-    margin-bottom: 8px;
-    text-align: center;
+    margin-bottom: 8px; 
+    /* text-align: center;
     background-color: #FFFFFF;
     padding-top: 32px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42;
+    color: #2e2f42; */
     
 } */
 
-/* .description-item {
+.description-item {
     text-align: center;
     background-color: #FFFFFF;
     padding-top: 8px;
     padding-bottom: 32px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-} */
+} 
 
 .team-description{
     padding: 120px 0 120px;
-    background-color: #F4F4FD
+    background-color: #F4F4FD;
 }
+
+
 
 
 .visually-hidden {
@@ -271,10 +273,26 @@ margin-right: auto;
 
 
 
-.second-screen-container{
+.second-screen{
     padding: 120px 0 120px;
     display: flex;
     align-items: center;
+}
+
+.item-description{
+    width: calc((100% - 72px) / 4);
+}
+
+.team-item:first-child{
+    border-top-left-radius: 0px;
+        border-top-right-radius: 0px;
+        border-bottom-right-radius: 4px;
+        border-bottom-left-radius: 4px;
+        background-color: #F4F4FD;
+}
+
+.second-title{
+    margin-bottom: 8px;
 }
 
 .title-list{
@@ -302,23 +320,25 @@ display: block;
 }
 
 .portfolio-item{
-margin-right: 24px;
+/* margin-right: 24px; */
 width: calc((100% - 48px) / 3);
 }
 
     /* margin-bottom: 48px; */
         /* padding-bottom: 120px; */
        
-
+.portfolio{
+    padding-top: 120px;
+        padding-bottom: 120px;
+}
 
 .portfolio-item:nth-child(3n){
     margin-right: 0;
 }
 
-/* .portfolio-title{
-    text-align: start;
+.portfolio-title{
     margin-bottom: 8px;
-} */
+}
 
 .description-portfolio{
     text-align: start;
