--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,6 @@ margin-right: auto;
     
 
 .description-footer{
-    margin-top: 16px;
     width: 264px;
     font-weight: 400;
         font-size: 16px;
@@ -185,16 +184,14 @@ margin-right: auto;
 }
 
  .title-description {
-
     margin-bottom: 8px; 
-    /* text-align: center;
+    text-align: center;
     background-color: #FFFFFF;
-    padding-top: 32px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    color: #2e2f42; */
+    color: #2e2f42; 
     
 } */
 
@@ -230,9 +227,6 @@ margin-right: auto;
 }
 
 .page-title{
-    /* padding-top: 120px;
-    margin-left: auto;
-    margin-right: auto; */
     margin-bottom: 72px;
     font-size: 36px;
     line-height: 1.11;
@@ -293,6 +287,11 @@ margin-right: auto;
 
 .second-title{
     margin-bottom: 8px;
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 
 .title-list{
@@ -338,10 +337,20 @@ width: calc((100% - 48px) / 3);
 
 .portfolio-title{
     margin-bottom: 8px;
+    font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
 }
 
 .description-portfolio{
     text-align: start;
+    /* font-weight: 400;
+        font-size: 16px; */
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
 
 
 }
