--- a/css/styles.css
+++ b/css/styles.css
@@ -193,13 +193,13 @@ margin-right: auto;
     letter-spacing: 0.02em;
     color: #2e2f42; 
     
-} */
+} 
 
 .description-item {
-    text-align: center;
+    text-align: start;
+     padding-bottom: 0px; 
     background-color: #FFFFFF;
-    padding-top: 8px;
-    padding-bottom: 32px;
+    /* padding-top: 8px; */
     line-height: 1.5;
     letter-spacing: 0.02em;
 } 
@@ -286,6 +286,8 @@ margin-right: auto;
 }
 
 .second-title{
+    text-align: start;
+    /* padding-top: 117px; */
     margin-bottom: 8px;
     font-weight: 500;
         font-size: 20px;
@@ -336,12 +338,17 @@ width: calc((100% - 48px) / 3);
 }
 
 .portfolio-title{
+    text-align: start;
     margin-bottom: 8px;
     font-weight: 500;
         font-size: 20px;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+}
+
+.iteem-tem-description{
+    text-align: center;
 }
 
 .description-portfolio{
